--- a/sandbox/users/smironov/lab_1_pure.ipynb
+++ b/sandbox/users/smironov/lab_1_pure.ipynb
@@ -32,12 +32,14 @@
     "\n",
     "Во всех заданиях данного раздела запрещено использовать циклы (ключевые слова *for* и *while*). Использование функции *map* также не допускается. Для каждой задачи приведите примеры использования реализованных функций. За отсутствие тестовых примеров могут быть сняты баллы за задание.\n",
     "\n",
-    "Под матрицей в заданиях понимается двумерный numpy.array."
+    "Под матрицей в заданиях понимается двумерный numpy.array.\n",
+    "\n",
+    "Jupiter hotkeys: http://johnlaudun.org/20131228-ipython-notebook-keyboard-shortcuts/"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -55,11 +57,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-8-8d879770ca20>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-8d879770ca20>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    # Your code here\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
    "source": [
     "def construct_array(X, i, j):\n",
     "    # Your code here"
@@ -94,14 +105,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
+    "#help(np.dstack)\n",
+    "#help(np.apply_along_axis)\n",
+    "\n",
     "def max_element(arr):\n",
-    "    # Your code here"
+    "    x = arr[1:]\n",
+    "    iy = np.where((arr[:-1] == 0))\n",
+    "    return np.max(x[iy])\n",
+    "\n",
+    "    \n",
+    "x = np.array([6, 2, 0, 3, 0, 0, 5, 7, 0])\n",
+    "print(max_element(x))\n"
    ]
   },
   {
