--- a/sandbox/users/smironov/lab_1_pure.ipynb
+++ b/sandbox/users/smironov/lab_1_pure.ipynb
@@ -105,17 +105,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5\n"
-     ]
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -129,7 +132,7 @@
     "\n",
     "    \n",
     "x = np.array([6, 2, 0, 3, 0, 0, 5, 7, 0])\n",
-    "print(max_element(x))\n"
+    "max_element(x)\n"
    ]
   },
   {
@@ -194,14 +197,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[        nan         nan  0.45438436  0.0515955 ]\n",
+      " [        nan  0.57708277  0.90056031  0.02545071]\n",
+      " [ 0.42485823  0.21054821         nan  0.06516548]]\n",
+      "[[ 0.3387057   0.3387057   0.45438436  0.0515955 ]\n",
+      " [ 0.3387057   0.57708277  0.90056031  0.02545071]\n",
+      " [ 0.42485823  0.21054821  0.3387057   0.06516548]]\n",
+      "[ nan  nan]\n",
+      "[ 0.  0.]\n",
+      "[ nan  nan]\n",
+      "[ nan  nan]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/nix/store/njpicn24zjmad7wld6msl01g0wixr8sx-python3.5-numpy-1.11.1/lib/python3.5/site-packages/numpy/lib/nanfunctions.py:675: RuntimeWarning: Mean of empty slice\n",
+      "  warnings.warn(\"Mean of empty slice\", RuntimeWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "def replace_nans(X):\n",
-    "    # Your code here"
+    "    notnan = X[np.where(np.logical_not(np.isnan(X)))] \n",
+    "    if notnan.size == 0:\n",
+    "        X[::] = 0\n",
+    "    else:\n",
+    "        mean = np.mean( notnan )\n",
+    "        X[np.where(np.isnan(X))] = mean\n",
+    "    \n",
+    "    return X\n",
+    "\n",
+    "def replace_nans2(X):\n",
+    "    X[np.where(np.isnan(X))] = np.nanmean(X)\n",
+    "    return X\n",
+    "\n",
+    "#print(np.mean([]))\n",
+    "x = np.random.random((3,4))\n",
+    "x[([0,1,0,2],\n",
+    "   [0,0,1,2])] = np.nan\n",
+    "print(x)\n",
+    "print(replace_nans(x))\n",
+    " \n",
+    "x = np.array([np.nan, np.nan])\n",
+    "print(x)\n",
+    "print(replace_nans(x))\n",
+    "\n",
+    " \n",
+    "x = np.array([np.nan, np.nan])\n",
+    "print(x)\n",
+    "print(replace_nans2(x))"
    ]
   },
   {
@@ -215,14 +270,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "shape mismatch: value array of shape (2,4) could not be broadcast to indexing result of shape (2,4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-100-42d364ea72ec>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m7\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mconstruct_matrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-100-42d364ea72ec>\u001b[0m in \u001b[0;36mconstruct_matrix\u001b[0;34m(x, y)\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0;31m#R[(np.arange(x.size, dtype=int),np.zeros(x.size, dtype=int))] = x\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;31m#R[(np.arange(x.size, dtype=int),np.ones(x.size, dtype=int))] = y\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0mR\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0;31m#R[:,1] = y\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mR\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: shape mismatch: value array of shape (2,4) could not be broadcast to indexing result of shape (2,4)"
+     ]
+    }
+   ],
    "source": [
     "def construct_matrix(x, y):\n",
-    "    # Your code here"
+    "    R=np.zeros((x.size,2))\n",
+    "    #R[(np.arange(x.size, dtype=int),np.zeros(x.size, dtype=int))] = x\n",
+    "    #R[(np.arange(x.size, dtype=int),np.ones(x.size, dtype=int))] = y\n",
+    "    R[:,0] = (x,y)\n",
+    "    R[:,1] = y\n",
+    "    return R\n",
+    "\n",
+    "x = np.array([0,1,2,3])\n",
+    "y = np.array([4,5,6,7])\n",
+    "construct_matrix(x,y)"
    ]
   },
   {
