smironov: update notebooks

--- a/sandbox/users/smironov/contest-dota.ipynb
+++ b/sandbox/users/smironov/contest-dota.ipynb
@@ -2,14 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 105,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Вопросы\n",
+    "* Как работает roc_auc, где у классификатора переменный порог?\n",
+    "* ~~Как работает кросс-валидация, можно ли (нужно ли?) получить обученный классификатор?~~ По идее, учить сразу на всех тестовых данных лучше всего, кросс-валидировать можно и отдельно."
    ]
   },
   {
@@ -958,8 +968,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "http://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -975,14 +992,14 @@
        "            warm_start=False)"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data = pd.merge(train,gold_end,on='mid',how='left')\n",
-    "X = data.drop(['mid', 'radiant_won'], axis=1)\n",
+    "X = data.drop(['mid', 'radiant_won'], axis=1) #.drop(team0, axis=1).drop(team1, axis=1)\n",
     "Y = data['radiant_won']\n",
     "\n",
     "clf = sk.RandomForestClassifier(n_estimators=100)\n",
@@ -991,7 +1008,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "skcv.cross_val_score(clf, X, Y, cv=5, scoring='roc_auc')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
    "metadata": {
     "collapsed": false
    },
@@ -999,16 +1027,60 @@
     {
      "data": {
       "text/plain": [
-       "array([ 0.69872664,  0.68707522,  0.68296026,  0.67909305,  0.68852745])"
+       "array([1, 0, 1, ..., 1, 0, 0])"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "skcv.cross_val_score(clf, X, Y, cv=5, scoring='roc_auc')"
+    "clf.predict(X.iloc[:])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "http://scikit-learn.org/stable/auto_examples/ensemble/plot_forest_iris.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXkAAAEACAYAAABWLgY0AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAH/tJREFUeJzt3Xt0XHW5//H306ZpQoEDhdDVNvRC71hAPD+ggAcneJCq\n5VRw/axysVCoXNryU1T4HTxI1B94WhQEtQKllktcsT1We6gWRSijUgFZHLBq05vQK9UMKIo0bS79\n/v747ulcOulMkpnMzJ7Pa62sTLJ3p4/b8uTJs7/fZ5tzDhERCacBxQ5AREQKR0leRCTElORFREJM\nSV5EJMSU5EVEQkxJXkQkxLImefNeMLNXzew1M1uU4Zx5ZvaWme0IPuYWJlwREemJqmwnOOecmV3k\nnGs1s2rgGTP7gHPuybRTFznn7ixMmCIi0hs5tWucc63By6rD/BnLS0QiIpI3Offkzez3QAxYn6GK\nB5gftHRWmll93iIUEZFeyznJO+emAsOBcWZ2ZtrhFcAYYBzwIrAsXwGKiEjvWU9n15jZzcCRzrkv\ndnN8CLDTOTc0wzENyhER6QXnXK9a4rmsrqkzs1HB62OAmUCLmU01s4nB9yck/ZGrgN8dJtCy/bj9\n9tuLHoPiL34clRa74i/+R1/k0q45BlhtZjuBl4G1zrlmYDbwkeCc681st5ntCL53TZ+iEhGRvMhl\nCeUW4LQM3/980uubgJvyG5qIiPSVdrz2QCQSKXYIfaL4i6ecYwfFX856fOO1T3+ZmevPv09EJAzM\nDFeoG68iIlK+lORFREJMSV5EJMSU5EVEQkxJXkQkxJTkRURCTEleRCTElORFREJMSV5EJMSU5EVE\nQkxJXkQkxJTkRURCTEleRCTElORFREJMSV5EJMSU5EVEQkxJXkQkxJTkRURCTEleRCTElORFREJM\nSV5EJMSyJnnzXjCzV83sNTNblOGcKjN7JDj+kplNKky4IiLSE1mTvHPOARc5504CJgHnmtkH0k67\nAqhxzo0FGoH78h2oiIj0XE7tGudca/Cyqps/MxN4ODh3NXCamQ3JR4AiItJ7Offkzez3QAxY75x7\nMu3wSGB30tevAyP6Hp6IiPRFVa4nOuemmtnRwA/N7Ezn3G+SDlva6QO7e5/GxsaDryORCJFIJNcQ\nREQqQjQaJRqN5uW9zLfce/AHzG4GjnTOfTHpe6uAB51za4KvW4Gxzrl30v6s6+nfJyKSi1gsxrZt\n2xgzZgx1dXXFDievzAznXHoxnZNcVtfUmdmo4PUx+P57i5lNNbOJwWmPA7ODc2YCr6QneBGRQmlu\nXs7o0ZO54ILrGD16Ms3Ny4sdUsnIWsmb2QTgB8BQoBNocs7dZmZ3ATHn3CIzqwKWARHgDeATzrmN\nGd5LlbyI5FUsFmP06Mm0tT0DnAqsp7a2ge3bN4amou9LJZ+1J++c2wKcluH7n0963YlfRiki0q+2\nbdtGdfUY2tpODb5zKoMGjWbbtm2hSfJ9oR2vIlJ2YrEYL774IrFYjDFjxtDevg1YHxxdT0fHdsaM\nGVO8AEuIkryIlJX0/vtTT61l6dLF1NY2cPTR76G2toGlSxerig/0eHVNn/4y9eRFpA8O138HtLom\ng5zXyYuIFNvh+u9nnHFG6JJ7PqhdIyJlQ/33nlOSF5GyUVdXp/57D6knLyJlJ8y7WzPpS09eSV5E\npMQVdKyBiIiULyV5EZEQU5IXEQkxJXkRkRBTkhcRCTEleRGREFOSF5GCSZ4WKcWhJC8iBaGnNZUG\nbYYSkbyrhKc19SdthhKRkhKfFukTPCRPi5T+pSQvInmnaZGlQ0leRPJO0yJLh3ryIlIwlTYtslA0\nhVJE+pWSd//SjVcR6TdaGlleslbyZlYPLAMmA/uAbzjnvp12zjzgDuDvwbe+4pxbkuG9VMmLlKlY\nLMbLL7/MzJmz2LfvF2hpZP/pj0r+S865E4FzgP9rZpMznLPIOTcq+DgkwYtI+YpX75dccjP79rUD\nLcERLY0sdVXZTnDO7QJ2Ba9jZrYJGAFsTDu1Vz9lRKS0xWIxrr76hpSNTRABzgf2aGlkietRT97M\nJgITgBcyHJ5vZq+a2cqgxSMiIZBpYxMMZciQ92ppZBnIWsnHmdkxwApgrnPunbTDK4CHgHbgFnwP\n/4JM79PY2HjwdSQSIRKJ9ChgEelfqRub4n34v/LDHzZz+umnK8EXQDQaJRqN5uW9clpCaWaDgZ8B\ny5xzj2Q5dwiw0zk3NMMx3XgVKUPNzcu5+uobGDRoNB0d21m6dDGf+MSsYodVMQq6Tt7MBgA/An7t\nnFuY9P2pQLtzbrOZTXDObQm+Px/4386592V4LyV5kRKVbe271sYXT6GTfAPwFLAbf3PVAQuA9wIx\n59wiM7sbmAV0AZuB6+NJP+29lORFSlC8Uq+u9q0ZVeqlRTteRaTXNBa49GnHq4j0msYCh5uSvEgF\nyfQ4Po0FDjcleZEK0d3MGY0FDjf15EUqQC59d62eKV196cnnvBlKRMpXvO/e1nZo3z2e0Ovq6pTc\nQ0jtGpEKoL575VKSF6kA6rtXLvXkRSqI+u7lSZuhRCpY/GEegAaGhZQ2Q4lUqObm5dTXT+DCC+dx\n4YUXM3LkSXocn6RQJS9SpjIti4QINTWOHTs2q6IPEVXyIhUmFouxZs0azIaT+jCPMQwceIJGEshB\nSvIiZSa+c3XBgnvZu/dVYFFwZD2wja6uVi2NlIO0GUqkDLS0tPCb3/yG8ePHZ3je6jTgO0ArgwYN\n4LvffUitGjlIPXmREnf11dfy3e8+BpwIbKe6+iTa2zccPH7UUadzxx1zmDRpklbXhJSWUIqEUCwW\n49Zbv8BDDz0K/BSIAFHgQ8DzaPZ75dDsGpGQeeCBJcybdyNdXQCjgY8Ci/EPYDuG6urzqKk56eDz\nVpXgpTtK8iIlJBaL8fWv38PChd8A6oE3gS8DU4AGYBjwFmvX/pzq6mrtXJWslORFSkRz83LmzLmO\nffvaSW7H+OS+ETgOmM6cOZ/k3HPPLWKkUk60hFKkyGKxGCtWrODKK69h376vApNIXfs+Gvg5sIvb\nb7+VpUsfLFaoUoZ041WkSGKxGA88sIQvf3khHR0nAK8Dhv8F+5ckKvmzqaoawLe+dTfXXju3iBFL\nsWh1jUiZeeCBJdx44+dob+8EniN5LAG0A4OA46iufoObbrqBm276jHrvFUyra0TKyAMPLOG66/4P\n8BDwddLHEsAbVFf/ldtum8O1185Vcpc+yVrJm1k9sAyYDOwDvuGc+3baOVXAUuA84C/Apc65TRne\nS5W8VLRYLMaJJ45n//6x+D77ZCB1wFh1dRevvPI8U6ZMKWaoUkL6o5L/knPuWTOrA/7HzJ52zm1M\nOn4FUOOcG2tmFwH3ARf2JiCRMIqPJaitraW6ejT79+8E9uDXvkeAocAeBg0awMMPP6QEL3mTNck7\n53YBu4LXMTPbBIzAr+mKmwk8EJyz2syWmNkQ59w7BYhZpKykjiXYycCBBtyOXxpZD7Rx440z+PCH\nP6SxBJJ3PerJm9lEYALwQtqhkcDupK9fx/8g2NKn6ETK3Ne+dneQ4BPr3ru6plFT81Wqqurp6NjG\nvffep1UzUjA5J3kzOwZYAczNUKGn94oGdvc+jY2NB19HIhEikUiuIYiUhVgsxjPPPMPWrVu5/fY7\ngYmk3lytZ9GiBUybNk07ViWjaDRKNBrNy3vltITSzAYDPwOWOeceyXB8FfCgc25N8HUrMDb9h4Fu\nvErYNTcv54orrqarywHD8b/UVpO67n0aGza8pL675KygT4YyswH4Cv6J5ARvZlOD9g3A48Ds4Psz\ngVfUj5dK0tLSwhe+8AWuuGI2XV0D8Wvft+LbNJ34/vtpwDTmzLlcCV76TS5LKBuAp/A9dwMcsAB4\nLxBzzi0KllAuwy8TeAP4RNrqm/h7qZKXUInFYsybt4D/+q8f4buf8ep9GX5iJMB4qqu7cO4N7rzz\nS3zuczcVK1wpU9rxKlIEftfq52lvPxb4M6lDxc7DrzvYA0xj+fKHaWhoUP9dekU7XkX62de+djef\n//x/4BP7fmAuqTdXjwdOB/7C/Plz+djHPlacQKXiKcmL9JBP8Lfip0OeCsSAnfgKPl7Jv86tt36G\nyy9X/12KS0leJAexWIympiaam5t58cVXgCfxT2uKJ/Zb8A/UHgG8zvz5c7njjjuKF7BIQEleJAs/\nUOwG/GTIevx/Np/BjyRowD/MYxf/9m8f4KyzzuTiiy9W9S4lQ0lepBuxWIw5c67hxz9eg/9PJfnG\n6jRgCLASmM5dd92pVTNSkrS6RiSDOXOuYdmyZcBg4jNn/M3Ve4MzJjCQPXRxgLvu+n9K8FJQWkIp\nkifr1q2joeFf6eg4gJ/OkV69vwR0ANOoHdjOvd/+NnOvvbZ4AUtFUJIXyYNTTjmd3/8+PmS1FTgS\nv7EpbgLwN+AfjBt3Is8996zWvUu/KOhYA5GwW7duHdXVtUGCfx4/juBZ4C0gGpy1HtjN+PHHsHr1\nCrZu3aQEL2VBlbxUtAkTprB16x+BI/AP7ng16egU4DV8T343dXX/RGvrniJEKZVOlbxID61btw6z\ngWzdugXfez8e+BOwKDhjPbA9eP0aF1xwnhK8lCVV8lJxJk8+mU2bNgI1+HXvu/ArZ67G31wdBewA\n9jFx4iRWrfqh1r1LUamSF8nBokWLMDM2bdqCT/DPA5uDz0vwm51GAlupGWxs2PAHNm1qUYKXsqbN\nUFIRBg06gs7OA/j+eiuZntYEPwB2c/zxxxGL/bk4gYrkmSp5CbV4772zE2Ay8DZQR2KgGMHnXcAd\nvPvd71KCl1BRJS+hVXf8CbzxZgyo5dBNTZ/Dz52px89938ezz/6Kc889t1jhihSEbrxK6Fx//fXc\nf//9+FUzVfgbqZuTzngX8Ef8U5z2UFNTRVvbP/o/UJEc6carSMDMuP/++E3UauCnwJuktmZeA7qA\nbSxefI8SvISaKnkJhY9//OMsX74Cv2pmBP6xe0cHn5cDN+A3O+0GOjnqqCP4+9/fKla4Ij2ix/9J\nRTMz/C+l8WWRyb33KP6B2sOA6cB+Vq9ezYwZM4oTrEg/UyUvZevKK6/kkUcexSf3ofgbrFuSzoj3\n3uuB3Rx55GDeflvVu5QfVfJScXz1bvh578/jb6JOIvU5qzuDs/9IU1MTl112WTFCFSkqJXkpK+9/\n//tZu/YZfNUe77234BP7d4CzgZPwFXwHtbWD2bt3X7HCFSm6rKtrzOwxM2s1s/XdHJ9nZm+Z2Y7g\nY27+wxQBswGsXftrEuvetwLPAdcDMfzUSIdfLtlGU9PD7N2rlTNS2XJZQvkg8MEs5yxyzo0KPpbk\nIS6Rgz772c8G7Zlq4B78ztXkkQRDgffgb7S2Ae0459SeESGHdo1z7ldmNi7Lab26ISCSTWrvfQTw\n7/hqPbn3/iawF+hk2rRzeO65dUWKVqT05Gsz1Hwze9XMVppZfZ7eUyrYtGnTkhJ8Db56/xs+yXcB\n7wPG43vwe4F2Wlv/pAQvkiYfN15XAA8B7cAtwDLggu5ObmxsPPg6EokQiUTyEIKEidkAfOU+Bvgz\nqWvfG/ADxnbjk77j/PPP5+mnny5OsCIFEI1GiUajeXmvnNbJB+2aHznnTs1y3hBgp3NuaDfHtU5e\nulVdXU1HRwe+cn8B2A9cA/w26azTgE34ar4T/XuSStAfs2vivzfH/8KpZjYxeD0h6byrgN/1JhCp\nbGYD6OioAsbh/1m24Cv5XaTOndkC7Gf69H9VghfJQdZ2jZmtxC9bON7MdgC3Ayfj16wtAq43s1n4\n0mozvvQSyUmieh8MrAEi+GT+L/glkrfg//mNxLdo2pTcRXpAYw2kaPyN1YH4pZH1+FUyi/GzZsYD\nB/AP194PHKCmppa2tr1FilakeDTWQMpKonqPJ/j0G6vD8DtZ24FOAFpbW6mrqytKvCLlTPPkpV+Z\nGR0dnfhdq0fjK/j0jU0fAjqATmbNmoVzTglepJdUyUu/8K0ZSDyt6XlgB/AxUjc27cZX8F3qvYvk\ngSp5KTi/7n0Qvno/Cf/PbikwAz85chowgfhYgiFDapTgRfJEN16lYFKr90H4te/JD/R4Cd+W+V/B\nZ5TcRTLQM16l5CQSfHznanztO/hEPxI/mmAa0IHZACV4kQJQkpe8MrOgPVOLb8EMAD5M6kjgeO/9\nDaCN1tZWDhzoKlLEIuGmdo3kTaJ6j897T2/NXITfOO03NYHaMyK5ULtGispX7/F574OBiaQui6wH\nfoBf+74DaOPZZ59VghfpB6rkpU98a6YGn8h3AUPwO1WfIbWSP4DfuarqXaSnVMlLv0tU7zX41szm\n4PM7wJX4naunkXha035aW1uV4EX6mSp56bHEwzwG4Ne9b046OgHYCQzHt2dUvYv0lSp56ReJ6n0A\nftfqMRw6Cng3fs37NmA/GzZsUIIXKSJV8pKTxMTIgfj5MoOAVvyE6UEkevJ+5gyoehfJF1XyUjCJ\n6n0wcCK+gv8H8Bfgo8FZB/CP4jsAdLJw4UIleJESoUpeupU6730ivtd+C/Cf+Gq9k8TzVv1mJv3/\nK5J/quQlrxK7VgeTmPf+Cn5Z5EL8SIJh+MS+A+iiqalJCV6kBKmSlxSpM2eq8atkNiWdcRrwGr73\nvg9Q9S5SaKrkpc8SvXfw/ywGAo/j58ukP0h7H7BPvXeRMqCHhkjSQLER+LXtncBR+IdqL8ZvbBqK\nZs6IlB9V8hXs0F2rW/HTImvwq2Wi+Idqr8TfdG3jtttuU4IXKSPqyVeo1N77ZPyN1bjx+Ir9b/gb\nrK8D+5TcRYpEPXnJWequ1YH4Fs1OUvvue/C9+HbgVWbPnqUEL1Kmsvbkzewx4ELgT865UzMcr8I/\nsPM8/A6ZS51zm9LPk+JLzJyJT43cCfwJaMT33evxN1Y70eP4RMIhl0r+QeCDhzl+BVDjnBuLzxb3\n5SEuyaNE9T4Q356JT418Ab/WvRE4Gr9U0if46667TgleJASyVvLOuV+Z2bjDnDITeCA4d7WZLTGz\nIc65d/IVpPReavUeXz3Tgp/1fiowCv8L2E60a1UkfPLRkx+JX1sX9zo+m0gRpe5ajT+OL756Jv1Z\nq38DurjpppuU4EVCJh/r5NPv+A483MmNjY0HX0ciESKRSB5CkGQ+uQ/C/wz/BrCE1MfxDQXOQeve\nRUpTNBolGo3m5b1yWkIZtGt+1M2N11XAg865NcHXrcDYTO0aLaEsrMSyyEH4n98n4scBO+CXJB7H\ndza+997O9OnTeeKJJ4oQrYjkqi9LKHOt5OON3fhfOBVod85txu99nw2sMbOZwCvqx/e/xLNWjwX+\nim/PxJP6ucD7gOPw3TRV7yKVImtP3sxWAr8AJprZDjO7Cp/UPxKc8ijQbmY78cs0bixQrJJBYuVM\nNb73fgL+/9aW4IxT8UPG9uKf1tTGKaecogQvUiG047WMJZZFgr/B+hyJ6j2CXxK5h8TDtFW9i5Qj\n7XitMKkrZwbjRw8M59Cbq+8GzgLamD59uhK8SAXSFMoykzoOuAZ/Q3U4ft7MehKVvHrvIqJKvmwk\nqvdaYAK+B78X33uvw29MPhsYR7x6HzVqlBK8SIVTT74MJAaKxUcSxKv1afhfxv6I772fhZ7WJBI+\n6smHVOq89+PxA8SS++71wbHT8Ql/H7NmaWKkiCSoJ1+iEuveR+Jny9wC/AepffddwAH8zJlOJXcR\nOYQq+RKTWr2/gJ83EwXuAC7HV+wTgs8dwH5mzfqoEryIZKRKvoQkqncHTCS1NTMKv/b9UeA1NDFS\nRHKhSr4EpO5avQef4NOf1rQZuBo/c6aL2bNnK8GLSFZaXVNkPrlXkRgoFsNX8rcCC0k8rakDn+BV\nvYtUGq2uKUOJde81+Ar+BXy1/gt8K+arJJ7W5BP8bbfdpgQvIj2iSr4IUte9PwR8HXgp6YyJ+B2r\n+1H1LiKq5MtEovdehZ/5Xg9cgJ8Omdx/341P7p0sXLhQCV5Eek2ra/pJYubMYPzkyJ8AH8XvVF2M\nXzkzFM2cEZF8UiVfYMOGDUvqvY/D99/H4ZP6YqABv8mpDdgOtKn3LiJ5o0q+gBLz3gfjb6yeit/Y\n9CF8W2YWfkzwdHz/XdW7iOSXKvkCGD58eNLEyDGkPqkpgk/s5+HHA38Q2M+GDRuU4EUk77S6Js+6\nnxgZIfGkprPxyyRVvYtIdlpdUwK++MUvJlXvI4ERHPqkpnPwM2f2oupdRPqDevJ5UG1GB+AT/PP4\nJzVNInVi5B78ssh2QNW7iPQPVfJ98L3vfQ87mOAHkJj3Xgd8h8STmvysd2hX9S4i/UqVfC8dUXMk\nbfs7gSPwlfsb+CWQ8ep9Cn7W+6sAHHvsUP7ylzeLE6yIVCxV8j0Ui8UwM9r2d+ET/HP4me+/xO9i\nPYvEvHf/KL7W1lYleBEpipySvJk1mNlGM3vVzL6S4fg8M3vLzHYEH3PzH2rxLZg3jxNOOIFBgG/J\njCX15upE4Gb8vPc2Lrn4Ypxz1NXVFSNcEZHcllCa2VZgJn6x96+BTzvnnk86Pg/4J+fcnVnepyyX\nULa0tHDOmWfy9j/+wQD8upnt1OBvtEZJ3Fw9G9+i2Udra6uSu4jkRUGXUJrZu4E3nXN/cM4dAJqA\nSzKd2psASt0nL72U008+maOSEnwr8HH2Ae/gE/t4fJtmLzNnXqjqXURKRi7tmpH4sYhxO4PvpZsf\ntHNWmll9XqIrspkzZrCiuZnxwNvA8fgEfzHw38Ao2qliL/BHxo4ehnOOVatWFTFiEZFUuayuSa/Q\nM/1gWIEfjN4O3AIsw8/QPURjY+PB15FIhEgkkkMI/e+Tl13Gz3/yEybjf6r9O9CInzrzI3xHfg/g\nzNjwhz8wZcqUosUqIuESjUaJRqN5ea+sPfmgXbPEOXdG8PUC4ETn3M3dnD8E2OmcG5rhWEn35GOx\nGE1NTaxdu5anf/zjlKEEDfhKfjtwAvAn4PwLLuCnTz5ZvIBFpCL0pSefSyX/W+BYMzsF2AhcDnzG\nzKYC7c65zWY2wTm3JTj/KuB3vQmmmJY3NzP70ksZABzHoUMJ6vGTZ7qArhEj+O1TT6l6F5GSlzXJ\nO+dcsCRyJX7qVpNz7tdmdhf+qdOLgOvNbBY+B24GrilgzHnV0tJCU1MTX/vqVxlI90MJtuD/xw0b\nNoxdu3d3+34iIqWkoqdQfnrBAhZ/61tU4Vsx1fhtTQDLgTn4in43cNzIkfznwoVcdtllxQlWRCpW\nX9o1FZvkW1paOP3kkxlAavUeJVG9nwVc9+lP86lPfUqtGREpmkL35EMnFovx/e9/n6PwA4Djvff4\nSLHh+CetTj7lFO65554iRSki0ncVN7tmeXMzk0eP5vG77+Zt/PLI9cGx+EixKTNmsGL1al5ev77b\n9xERKQcV1a6JxWJMHj2aZ9raDrZk/hk/Viy+42vu/Pnc+81vFi1GEZF0atfkaNu2bYyprubUtjbA\nt2nedeSRnHPFFdTX13PxxRer9y4ioVLxlXxDbS0bt2/XrBkRKVl6xmuO6urqWLx0KQ21tbzn6KNp\nqK1l8dKlSvAiEloVVcnHxWIx37oZM0YJXkRKntbJi4iEmNo1IiKSkZK8iEiIKcmLiISYkryISIgp\nyYuIhJiSvIhIiCnJi4iEmJK8iEiIKcmLiISYkryISIgpyYuIhJiSvIhIiCnJi4iEWE5J3swazGyj\nmb1qZl/JcLzKzB4xs9fM7CUzm5T/UEVEpKdyreSXAB8FxgMXmNm0tONXADXOubFAI3Bf3iIsIdFo\ntNgh9IniL55yjh0UfznLmuTN7N3Am865PzjnDgBNwCVpp80EHgZwzq0GTjOzIXmOtejK/R+K4i+e\nco4dFH85y6WSHwnsTvp6Z/C9w53zOjCib6GJiEhf5ZLk059GkunPpJ8zsHfhiIhIPmV9/F/Qrlni\nnDsj+HoBcKJz7uakc1YBDzrn1gRftwJjnXPvpL2Xnv0nItILvX38X1UO5/wWONbMTgE2ApcDnzGz\nqUC7c24z8DgwG1hjZjOBV9ITfF+CFBGR3snargmevD0XWAlsBZ5yzv0an9Q/Epz2KNBuZjvxq2tu\nLEi0IiLSI1nbNSIiUr4KsuO13DdP5RD/PDN7y8x2BB9zixFnJmb2mJm1mtn6bo6X+rXPFn8pX/t6\nM/u5me00sy1mNi/DOSV7/XOMv5Svv5nZC8F/t6+Z2aIM55Ty9c8l/p5ff+dc3j/wbZ134X+IPA9M\nSzt+FbA8eH0R8LNCxFHA+OcBtxY7zm5i/xfgn4H13Rwv9WufLf5Svvb1wHuD13X45caTy+X65xh/\nyV7/IL4Tgs/VwDrgA+Vy/XOMv8fXP++VfLlvnsoxfjh02WhJcM79CnjrMKeU7LWHnOKH0r32u5xz\nzwavY8AmDt0vUrLXP8f4oUSvP4BzrjV4WUXmTkXJXn/IKX7o4fUvRLum3DdP5RI/wPzg16qVZlbf\nP6HlRSlf+1yV/LU3s4nABOCFtENlcf0PEz+U+PU3s98DMfxvg0+mHS75658lfujh9S9Eki/3zVO5\nxL8CGAOMA14ElhU4pnwq5Wufi5K/9mZ2DD7Oue7QpcQlf/2zxF/y1985NxUYDowzszPTDpf89c8S\nf4+vfyGS/C7gxKSv60n9yRk/J/kn0HD8T9RSkDV+51zMObff+SbZN/E95HJRytc+q1K/9mY2GFgF\n3NNNFVbS1z9b/KV+/eOcc38HngRmpB0q6esf1138vbn+hUjyBzdPmdkg/OapVWY2NfgVEBKbpzjc\n5qkiyRq/mU1IOv8q4HdFiPNwjKSKpYyufVy38ZfytTezAfhK6wnn3CNJ3y+L659L/CV+/evMbFTw\n+hh8/72ljK5/1vh7df0LdIe4AdgMbAfuCL53F3Bz8LoKeAzf736ZtDv4xf7IIf678dX9DuApYEKx\nY06KfWUQ2/4gvqvK7Npni7+Ur30D0BXEtjP4PLNcrn+O8Zfy9Z+AL9J2Aq8BXwm+Xy7XP5f4e3z9\ntRlKRCTE9Pg/EZEQU5IXEQkxJXkRkRBTkhcRCTEleRGREFOSFxEJMSV5EZEQU5IXEQmx/w/7xeyy\nAmRfdgAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7f112ff3c128>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "def draw_contour(clf, X, feature1, feature2):\n",
+    "    #plot_step = 100\n",
+    "    #x1_min, x1_max = X[feature1].min() - 1, X[feature1].max() + 1\n",
+    "    #x2_min, x2_max = X[feature2].min() - 1, X[feature2].max() + 1\n",
+    "    #xx1, xx2 = np.meshgrid(np.arange(x1_min, x1_max, plot_step),\n",
+    "    #                       np.arange(x2_min, x2_max, plot_step))\n",
+    "    y = clf.predict(X)\n",
+    "    idx0 = np.where(y==0)\n",
+    "    idx1 = np.where(y==1)\n",
+    "    #print(f1.iloc[idx0].values)\n",
+    "    plt.scatter(X[feature1].iloc[idx0], X[feature2].iloc[idx0], c='r', cmap=plt.cm.RdYlBu)\n",
+    "    plt.scatter(X[feature1].iloc[idx1], X[feature2].iloc[idx1], c='b', cmap=plt.cm.RdYlBu)\n",
+    "    \n",
+    "draw_contour(clf, X, \"ratio\", \"ratio\")\n",
+    "plt.show()\n",
+    "    "
    ]
   },
   {
